force-app/main/default/objects/Work_Order_Line_Item__c/Work_Order_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Line items on a Work Order. Populated from the BMG package scope, auto-populated from an approved Takeoff, or entered manually via the Other option.</description>
    <label>Work Order Line Item</label>
    <nameField>
        <displayFormat>LI-{0000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>