force-app/main/default/objects/Work_Order_Line_Item__c/fields/Actual_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Actual_Minutes__c</fullName>
    <description>Actual minutes taken for this line item, entered by foreman or system.</description>
    <label>Actual Minutes</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>