force-app/main/default/objects/Work_Order_Line_Item__c/fields/Duration_Calc_Notes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Calc_Notes__c</fullName>
    <description>Exception explanation or notes from the WLR duration calculation. Set by WLRDurationCalculationService when Duration_Calc_Status__c is not Matched.</description>
    <label>Duration Calc Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>