force-app/main/default/objects/Work_Order_Line_Item__c/fields/Duration_Calc_Status__c.field-meta.xml
<CustomField>
    <fullName>Duration_Calc_Status__c</fullName>
    <description>Status of the WLR duration match for this line item. Set by WLRDurationCalculationService or by flow. Matched = WLR standard found and applied. Missing Standard = no WLR match, line item not counted. Missing Quantity = Quantity__c is null, cannot calculate. Manual Override = scheduler entered duration manually. Needs Review = exception requiring human review.</description>
    <label>Duration Calc Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>Missing Standard</fullName>
            </value>
            <value>
                <fullName>Missing Quantity</fullName>
            </value>
            <value>
                <fullName>Manual Override</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>