force-app/main/default/objects/Work_Order_Line_Item__c/fields/Goal_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Goal_Headcount__c</fullName>
    <label>Goal Headcount</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>