force-app/main/default/objects/Work_Order_Line_Item__c/fields/Goal_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Goal_Minutes__c</fullName>
    <formula>IF(Item_Catalog__r.Time_Standard_Min__c != null, Quantity__c * Item_Catalog__r.Time_Standard_Min__c, IF(Time_Standard__c != null, Quantity__c * Time_Standard__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>