force-app/main/default/objects/Work_Order_Line_Item__c/fields/Inventory_Required__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inventory Required</label>
    <type>Checkbox</type>
</CustomField>