force-app/main/default/objects/Work_Order_Line_Item__c/fields/Is_Manual__c.field-meta.xml
<CustomField>
    <fullName>Is_Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Entry (Other)</label>
    <type>Checkbox</type>
</CustomField>