force-app/main/default/objects/Work_Order_Line_Item__c/fields/Item_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Item_Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Item from catalog. Drives Goal_Minutes via Time_Standard_Min__c cross-object formula.</description>
    <label>Item Catalog</label>
    <referenceTo>Item_Catalog__c</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>