force-app/main/default/objects/Work_Order_Line_Item__c/fields/Package_Item__c.field-meta.xml
<CustomField>
    <fullName>Package_Item__c</fullName>
    <label>Package Item</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
                <label>Other (Manual Entry)</label>
            </value>
            <value>
                <fullName>Sod - Bermuda</fullName>
            </value>
            <value>
                <fullName>Sod - Zoysia</fullName>
            </value>
            <value>
                <fullName>Sod - Fescue</fullName>
            </value>
            <value>
                <fullName>Sod - Centipede</fullName>
            </value>
            <value>
                <fullName>Shrubs - Foundation Package</fullName>
            </value>
            <value>
                <fullName>Shrubs - Builder Standard</fullName>
            </value>
            <value>
                <fullName>Shrubs - Premium</fullName>
            </value>
            <value>
                <fullName>Tree - Understory 2in</fullName>
            </value>
            <value>
                <fullName>Tree - Shade 3in</fullName>
            </value>
            <value>
                <fullName>Tree - Ornamental</fullName>
            </value>
            <value>
                <fullName>Mulch - Pine Bark</fullName>
            </value>
            <value>
                <fullName>Mulch - Hardwood</fullName>
            </value>
            <value>
                <fullName>Pine Straw</fullName>
            </value>
            <value>
                <fullName>Cleanup - Final Grade</fullName>
            </value>
            <value>
                <fullName>Debris Removal</fullName>
            </value>
            <value>
                <fullName>Grading - Topsoil</fullName>
            </value>
            <value>
                <fullName>Irrigation - Full System</fullName>
            </value>
            <value>
                <fullName>Irrigation - Drip Only</fullName>
            </value>
            <value>
                <fullName>Irrigation - Backflow Install</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>