force-app/main/default/objects/Work_Order_Line_Item__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Package</fullName>
                <default>true</default>
                <label>Package (BMG Scope)</label>
            </value>
            <value>
                <fullName>Takeoff</fullName>
                <label>Auto-populated from Takeoff</label>
            </value>
            <value>
                <fullName>Manual</fullName>
                <label>Manual Entry (Other)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>