force-app/main/default/objects/Work_Order_Line_Item__c/fields/Takeoff_Line__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Takeoff Line</label>
    <referenceTo>Takeoff_Line__c</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>