force-app/main/default/objects/Work_Order_Line_Item__c/fields/Time_Standard__c.field-meta.xml
<CustomField>
    <fullName>Time_Standard__c</fullName>
    <label>Time Standard (min/unit)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>